push : correction ,visibilité font family arial

--- a/page/css/index.css
+++ b/page/css/index.css
@@ -23,7 +23,7 @@ body {
 
 .title {
     text-align: center;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-weight: normal;
     margin-top: none;
     font-size: 30px;
@@ -38,6 +38,7 @@ body {
 
 .menu-text {
     font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .menu-text-alerte {
